font awesome icon

--- a/src/app/components/edit-office/edit-office.component.html
+++ b/src/app/components/edit-office/edit-office.component.html
@@ -1,5 +1,5 @@
 <div class="container mainContainer">
-    <i class="fa fa-black-tie" style="font-family:'FontAwesome';"></i>
+    <i class="fa fa-building" style="font-family:'FontAwesome';"></i>
     <h4>Offices:</h4>
     <table class="table">
         <thead>
