--- a/src/app/components/driver-list/driver-list.component.html
+++ b/src/app/components/driver-list/driver-list.component.html
@@ -16,7 +16,7 @@
         </div>
       </div>
       <p id="total"></p>-->
-      <h4>Driver's List</h4>
+      <h4 class= title>Driver's List</h4>
    
      <table class="table table-striped">
        <thead class="thead-dark">
